@@ -8188,4 +8188,5 @@ EPRINTS-3.1-beta-2
 
 2009-04-20 tdb
  * Removed broken/superfluous replication of require
+ * Added rename_field() method to Database.pm to rename meta fields
 
